--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -53,6 +53,7 @@
 		img {
 			margin: auto @default-margin;
 			padding: @default-padding;
+			padding-right: 0;
 			width: 85px;
 		}
 		.burst-header-left {
@@ -62,17 +63,20 @@
 				margin: auto 15px;
 				a {
 					font-size: @default-font-size * 1.1;
-					padding: 32px 10px;
+					padding: 28px 15px;
 					text-decoration: none;
 					color: @grey-dark;
 					height: 100%;
+					border-bottom: 4px solid transparent;
+					transition: border 0.3s ease-out;
 					box-sizing: border-box;
 					-moz-box-sizing: border-box;
 					-webkit-box-sizing: border-box;
-					border-bottom: 4px solid @rsp-green;
-
-					.active{
-
+					&.active{
+						border-bottom: 4px solid @brand-primary;
+					}
+					&:hover{
+						color: @brand-primary;
 					}
 				}
 
@@ -920,5 +924,168 @@ input:focus + .burst-slider {
 		font-size: 14px;
 		text-transform: capitalize;
 		margin-top: 1px;
+	}
+}
+
+// new saved dropdown
+.burst-settings-saved{
+	display: none;
+	opacity: 0;
+	top: 20px;
+	position: fixed;
+	background-color: #fff;
+	z-index: 999999;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: left;
+	box-shadow: 0 0 5px 5px rgba(222, 222, 222, 0.2);
+	svg{
+		path{
+			fill: @rsp-green;
+		}
+	}
+	.burst-settings-saved__text_and_icon{
+		display: flex;
+		align-content: center;
+		margin: 10px 25px;
+		span{
+			display: flex;
+			align-self: center;
+			font-size: @default-font-size;
+			font-weight: 400;
+			color: @grey-darker;
+			margin: 2px 3px;
+		}
+		div {
+			display: flex;
+			align-self: center;
+		}
+	}
+	&.burst-settings-saved--fade-in{
+		display: block;
+		-webkit-animation: fadeInFromNone 5s ease-in-out;
+		-moz-animation: fadeInFromNone 5s ease-in-out;
+		-o-animation: fadeInFromNone 5s ease-in-out;
+		animation: fadeInFromNone 5s ease-in-out;
+	}
+
+	@-webkit-keyframes fadeInFromNone {
+		0% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+
+		5% {
+			display: block;
+			opacity: 0;
+			top: -10px;
+		}
+
+		15% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		90% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		100% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+	}
+
+	@-moz-keyframes fadeInFromNone {
+		0% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+
+		5% {
+			display: block;
+			opacity: 0;
+			top: -10px;
+		}
+
+		15% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		90% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		100% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+	}
+
+	@-o-keyframes fadeInFromNone {
+		0% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+
+		5% {
+			display: block;
+			opacity: 0;
+			top: -10px;
+		}
+
+		15% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		90% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		100% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+	}
+
+	@keyframes fadeInFromNone {
+		0% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
+
+		5% {
+			display: block;
+			opacity: 0;
+			top: -10px;
+		}
+
+		15% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		90% {
+			display: block;
+			opacity: 1;
+			top: 20px;
+		}
+		100% {
+			display: none;
+			opacity: 0;
+			top: 20px;
+		}
 	}
 }
