--- a/assets/css/input-fields.less
+++ b/assets/css/input-fields.less
@@ -3,8 +3,6 @@
     .burst-field{
       display: flex;
       align-items: center;
-
-
       .select2-container{
         max-width: 300px;
         margin: 0 15px;
@@ -15,4 +13,12 @@
       }
     }
   }
+  &.burst-select_variant{
+   label{
+      margin: 0 0;
+    }
+  }
+}
+.select2-results__options li{
+  font-size: 1.4rem !important;
 }
