--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -17,6 +17,12 @@
   height: 33px;
   line-height: 33px;
 }
+.field-group.burst-select_variant label {
+  margin: 0 0;
+}
+.select2-results__options li {
+  font-size: 1.4rem !important;
+}
 .burst-noticed-hook-element {
   display: none;
 }
@@ -41,10 +47,14 @@
     overflow: hidden;
   }
 }
+html,
+body {
+  font-size: 62.5%;
+}
 #burst {
+  font-size: 1.4rem;
   padding-bottom: 20px;
   margin: 0 0 0 -20px;
-  font-size: 13px;
   /* field styles */
   /*
 	Animated skeleton screen using CSS.
@@ -76,13 +86,28 @@
 #burst p {
   color: #3c434a;
 }
-#burst p,
+#burst p {
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+}
+#burst a {
+  font-size: 1.4rem;
+}
 #burst label {
-  font-size: 13px;
-  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+}
+#burst input[type="checkbox"],
+#burst input[type="radio"] {
+  height: 1.6rem;
+  width: 1.6rem;
+}
+#burst input[type="checkbox"]:before {
+  height: 1.8rem;
+  width: 1.8rem;
 }
 #burst .burst-grid-title {
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 #burst #burst-header {
   display: flex;
@@ -105,7 +130,7 @@
   margin: auto 15px;
 }
 #burst #burst-header .burst-header-left .burst-header-menu a {
-  font-size: 14.3px;
+  font-size: 1.5rem;
   padding: 28px 15px;
   text-decoration: none;
   color: #737373;
@@ -183,12 +208,11 @@
   min-height: 46px;
 }
 #burst .burst-notice {
-  display: grid;
-  grid-template-columns: 70px auto 50px;
-  grid-gap: 20px;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  padding: 1rem 2rem;
 }
 #burst .burst-notice .burst-message {
-  font-size: 12px;
   padding: 14px 0;
 }
 #burst .burst-notice .burst-status {
@@ -197,7 +221,7 @@
   text-align: center;
   border-radius: 15px;
   padding: 4px 8px 4px 8px;
-  font-size: 12px;
+  font-size: 1.2rem;
   font-weight: 600;
   height: 17px;
   line-height: 17px;
@@ -217,7 +241,7 @@
   background-color: #D7263D;
   color: #fff;
   padding: 2px 6px;
-  font-size: 10px;
+  font-size: 1rem;
 }
 #burst .burst-notice > div {
   padding: 10px 0;
@@ -234,7 +258,7 @@
 }
 #burst .burst-notice button .burst-close-notice-x {
   color: #ccc;
-  font-size: 0.9em;
+  font-size: 0.9rem;
 }
 #burst .burst-skeleton:empty {
   width: 100%;
@@ -252,7 +276,7 @@
   }
 }
 #burst .burst-panel {
-  font-size: 13px!important;
+  font-size: 1.3rem !important;
   color: #383d41;
   background-color: #F2F2F2;
   border: 1px solid #d6d8db;
@@ -276,10 +300,10 @@
   padding: 10px 15px;
 }
 #burst .burst-panel h1 {
-  font-size: 22px;
+  font-size: 2.2rem;
 }
 #burst .burst-panel p {
-  font-size: 13px!important;
+  font-size: 1.3rem !important;
 }
 #burst .burst-panel.burst-notice {
   background-color: #fff;
@@ -314,6 +338,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: 10px;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
 }
 @media screen and (max-width: 480px) {
   #burst .burst-tips-tricks-container,
@@ -345,7 +371,7 @@
 #burst .burst-upsell-container .burst-tips-tricks-element .burst-bullet,
 #burst .burst-tips-tricks-container .plugin-text .burst-bullet,
 #burst .burst-upsell-container .plugin-text .burst-bullet {
-  margin: 7px;
+  margin: 9px;
   background-color: #ededed;
   float: left;
 }
@@ -383,22 +409,19 @@
   display: flex;
   flex-wrap: wrap;
   padding: 10px 10px;
-}
-#burst .burst-row div + div {
-  padding-left: 20px;
+  line-height: 2rem;
 }
 #burst .burst-percentage-text-container {
   display: flex;
   flex-wrap: wrap;
   padding: 10px 10px;
+  line-height: 2rem;
   padding-top: 20px;
 }
-#burst .burst-percentage-text-container div + div {
-  padding-left: 20px;
-}
 #burst .burst-percentage-text-container .burst-percentage-number {
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 700;
+  margin-right: 1rem;
 }
 #burst .burst-percentage-text-container .burst-percentage-text {
   font-weight: 700;
@@ -407,9 +430,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 10px 10px;
-}
-#burst .burst-objective-total-container div + div {
-  padding-left: 20px;
+  line-height: 2rem;
 }
 #burst .burst-objective-total-container div {
   flex: 1;
@@ -421,13 +442,7 @@
   display: flex;
   flex-wrap: wrap;
   padding: 10px 10px;
-}
-#burst .burst-objective-bullets-container div + div {
-  padding-left: 20px;
-}
-#burst .burst-objective-bullets-container .burst-column-1,
-#burst .burst-objective-bullets-container .burst-column-3 {
-  width: 40px;
+  line-height: 2rem;
 }
 #burst .burst-objective-bullets-container .burst-column-2,
 #burst .burst-objective-bullets-container .burst-column-4 {
@@ -472,7 +487,7 @@
 }
 #burst #burst-content-area .burst-grid p,
 #burst #burst-content-area .burst-grid label {
-  font-size: 13px;
+  font-size: 1.4rem;
   font-weight: 500;
 }
 #burst #burst-content-area .burst-grid .burst-grid-container {
@@ -530,7 +545,7 @@
   padding: 15px 20px;
 }
 #burst #burst-content-area .burst-grid .burst-grid-header .burst-grid-title {
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
   padding: 9px 0 4px 0;
 }
@@ -568,7 +583,7 @@
 /* tooltip styles */
 .burst-tooltip {
   font-weight: 400;
-  font-size: 13px;
+  font-size: 1.3rem;
   position: relative;
   /* making the .tooltip span a container for the tooltip text */
   margin-left: 5px;
@@ -691,13 +706,13 @@
   text-align: center;
   color: #fff;
   line-height: 1.45;
-  font-size: 12px;
+  font-size: 1.2rem;
 }
 .burst-experiment-dot.dot-large:before {
   height: 23px;
   width: 23px;
   line-height: 1.6;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .burst-experiment-dot.control:before {
   background-color: #29b6f6;
@@ -711,18 +726,18 @@
   padding: 10px;
   border-radius: 5px;
   background: #ededed;
-  font-size: 12px;
+  font-size: 1.2rem;
   font-style: italic;
 }
 .burst-accompanied-text {
   color: #737373;
-  font-size: 12px;
+  font-size: 1.2rem;
 }
 .burst-experiment-info-below-title {
   padding: 10px 14px;
   display: inline-flex;
   align-items: center;
-  font-size: 13px;
+  font-size: 1.4rem;
   font-weight: 500;
   margin: 4px 0;
   padding: 5px 10px;
@@ -851,7 +866,7 @@ input:focus + .burst-slider {
 #burst .burst-experiment-version {
   display: flex;
   margin: 6px 0;
-  font-size: 12px;
+  font-size: 1.2rem;
   line-height: 18px;
   padding: 5px 7px;
   border-radius: 5px;
@@ -871,7 +886,7 @@ input:focus + .burst-slider {
 }
 #burst .burst-experiment-version p {
   font-weight: 500;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-transform: capitalize;
   margin-top: 1px;
 }
@@ -898,7 +913,7 @@ input:focus + .burst-slider {
 .burst-settings-saved .burst-settings-saved__text_and_icon span {
   display: flex;
   align-self: center;
-  font-size: 13px;
+  font-size: 1.4rem;
   font-weight: 400;
   color: #696969;
   margin: 2px 3px;
