--- a/assets/css/wizard.css
+++ b/assets/css/wizard.css
@@ -45,7 +45,7 @@
   padding: 20px;
   border-bottom: 1px solid #dadada;
   display: flex;
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
   justify-content: space-between;
   align-content: center;
@@ -58,7 +58,7 @@
 }
 #burst-content-area .burst-wizard-subtitle h2 {
   margin: 20px 20px 0 20px;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 #burst-content-area .burst-wizard-menu {
   background-color: white;
@@ -93,7 +93,8 @@
   width: calc(100% - (20px + 20px));
 }
 #burst-content-area .burst-wizard-menu .burst-step .burst-step-header a h2 {
-  font-size: 15px;
+  font-size: 1.6rem;
+  line-height: 2rem;
   font-weight: 500;
   margin: 0;
 }
@@ -125,7 +126,8 @@
   color: initial ;
 }
 #burst-content-area .burst-wizard-menu .burst-step .burst-section a h3 {
-  font-size: 13px;
+  font-size: 1.3rem;
+  line-height: 1.6rem;
   font-weight: 400;
   margin: 0;
 }
@@ -158,7 +160,7 @@
 }
 #burst-content-area .burst-section-content .burst-form {
   display: grid;
-  grid-template-columns: auto 325px !important;
+  grid-template-columns: 1fr minmax(325px, 350px) !important;
   grid-column-gap: 15px;
 }
 #burst-content-area .burst-section-content .burst-form .burst-wizard-intro,
@@ -194,7 +196,7 @@
 #burst-content-area .burst-section-content .burst-form .field-group {
   grid-column: span 2;
   display: grid;
-  grid-template-columns: auto 325px;
+  grid-template-columns: 1fr minmax(325px, 350px);
   grid-column-gap: 15px;
 }
 #burst-content-area .burst-section-content .burst-form .field-group .burst-field {
@@ -204,7 +206,7 @@
   margin: 0;
 }
 #burst-content-area .burst-section-content .burst-form .field-group .burst-field select {
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 #burst-content-area .burst-section-content .burst-form .field-group .burst-label {
   padding: 0;
@@ -318,7 +320,7 @@
 #burst-content-area .burst-section-content .burst-scroll .field-group {
   grid-column: span 2;
   display: grid;
-  grid-template-columns: auto 325px;
+  grid-template-columns: 1fr minmax(325px, 350px);
   grid-column-gap: 15px;
 }
 #burst-content-area .burst-section-content .burst-scroll .field-group.burst-colspan-1 {
@@ -344,11 +346,11 @@
   grid-column: span 2;
   margin: 0;
   padding: 20px 20px 0 20px;
-  font-size: 18px;
+  font-size: 1.8rem;
 }
 #burst-content-area .burst-section-content .burst-scroll .burst-sublabel label {
   color: darkgrey;
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 #burst-content-area .burst-section-content .burst-scroll label .burst-icon {
   display: inline;
@@ -429,7 +431,7 @@
   margin: auto 0;
 }
 #burst-content-area .burst-section-content .burst-scroll .burst-settings-item .burst-settings-header-container .burst-grid-controls select {
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 #burst-content-area .burst-section-content .burst-scroll .burst-settings-item .burst-settings-header-container .burst-settings-header {
   grid-column: span 2;
@@ -443,7 +445,7 @@
   border-bottom: 1px solid #ededed;
 }
 #burst-content-area .burst-section-content .burst-scroll .burst-settings-item .burst-settings-header-container .burst-settings-header .burst-settings-title {
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: 600;
 }
 #burst-content-area .burst-section-content .burst-scroll .burst-settings-item .burst-settings-body .burst-panel-wrap,
@@ -512,7 +514,7 @@
 }
 #burst-content-area .burst-cookies-table h2 {
   font-weight: normal;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 #burst-content-area .burst-cookies-table .burst-cookies-table-body {
   border-radius: 5px;
@@ -543,7 +545,7 @@
 #burst-settings .burst-field .burst-icon.dashicons-before:before,
 .burst-wizard .burst-step .burst-icon.dashicons-before:before,
 #burst-settings .burst-step .burst-icon.dashicons-before:before {
-  font-size: 18px;
+  font-size: 1.8rem;
   height: 20px;
   width: 20px;
   margin-top: 2px;
@@ -610,7 +612,7 @@
 #burst-settings .burst-field .burst-icon.arrow-right-alt2::before,
 .burst-wizard .burst-step .burst-icon.arrow-right-alt2::before,
 #burst-settings .burst-step .burst-icon.arrow-right-alt2::before {
-  font-size: 17px;
+  font-size: 1.7rem;
 }
 .burst-wizard .burst-circle-green,
 #burst-settings .burst-circle-green {
@@ -877,7 +879,7 @@ a:hover {
   color: #333;
 }
 a.button.burst-open-modal {
-  font-size: 9px;
+  font-size: 0.9rem;
   line-height: 13px;
   height: 15px;
   min-height: 15px;
@@ -890,7 +892,7 @@ a.button.burst-open-modal {
   width: 80%;
 }
 #burst_language {
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 #burst_language.burst_cookie_language_selector {
   margin-bottom: 0;
@@ -923,7 +925,7 @@ a.button.burst-open-modal {
   margin-bottom: 0px;
 }
 .burst-list-container .burst-service-divider {
-  font-size: 14px;
+  font-size: 1.4rem;
   margin-bottom: 10px;
 }
 .burst-legenda {
@@ -936,7 +938,7 @@ a.button.burst-open-modal {
 .burst-panel {
   padding: 20px;
   margin-bottom: 20px;
-  font-size: 13px !important;
+  font-size: 1.3rem !important;
   color: #383d41;
   background-color: #F2F2F2;
   border: 1px solid #dadada;
@@ -1019,10 +1021,10 @@ a.button.burst-open-modal {
   padding: 10px 15px;
 }
 .burst-panel h1 {
-  font-size: 22px;
+  font-size: 2.2rem;
 }
 .burst-panel p {
-  font-size: 13px !important;
+  font-size: 1.3rem !important;
 }
 .burst-panel.burst-notice {
   background-color: #fff;
@@ -1157,7 +1159,7 @@ input:focus + .burst-slider {
 }
 #complete_wizard_first_notice p {
   border-radius: 0px;
-  font-size: 16px;
+  font-size: 1.6rem;
   background-color: #61CE70;
   color: white;
   position: relative;
@@ -1176,7 +1178,7 @@ html .mceContentBody {
   height: 100px;
 }
 .burst-comment {
-  font-size: 12px;
+  font-size: 1.2rem;
   margin-top: 5px;
 }
 .burst-cookie-field .burst-cookie-header {
@@ -1243,7 +1245,7 @@ html .mceContentBody {
 #burst-wizard label,
 #cookie-policy-snapshots label,
 #burst-settings label {
-  font-size: 13px;
+  font-size: 1.3rem;
 }
 #burst-wizard .field-group,
 #cookie-policy-snapshots .field-group,
@@ -1260,7 +1262,7 @@ html .mceContentBody {
 #cookie-policy-snapshots .field-group .burst-label label,
 #burst-settings .field-group .burst-label label {
   display: flex;
-  font-size: 15px;
+  font-size: 1.5rem;
   font-weight: 500;
   cursor: default;
 }
@@ -1404,7 +1406,7 @@ html .mceContentBody {
 #burst-settings #burst-content-area .burst-master-label h2 {
   margin: 0;
   padding: 20px 20px 0 0;
-  font-size: 18px;
+  font-size: 1.8rem;
   background-color: white;
 }
 #burst-wizard .burst-body .burst-remove,
@@ -1438,7 +1440,7 @@ html .mceContentBody {
 #cookie-policy-snapshots #burst-content-area .burst-menu-item.active i,
 #burst-settings #burst-content-area .burst-menu-item.active i {
   color: black;
-  font-size: 1.35em;
+  font-size: 1.35rem;
   float: left;
 }
 #burst-wizard .burst-body .burst-menu-item.active a,
@@ -1460,7 +1462,7 @@ html .mceContentBody {
 #burst-settings #burst-content-area .burst-done a {
   text-decoration: none;
   color: white;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 #burst-wizard .burst-body .burst-to-do a,
 #cookie-policy-snapshots .burst-body .burst-to-do a,
@@ -1469,7 +1471,7 @@ html .mceContentBody {
 #cookie-policy-snapshots #burst-content-area .burst-to-do a,
 #burst-settings #burst-content-area .burst-to-do a {
   color: white;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-decoration: none;
   opacity: 0.6;
 }
@@ -1530,7 +1532,7 @@ html .mceContentBody {
   content: "\2022";
   text-indent: -9999px;
   border-radius: 50px;
-  font-size: 24px;
+  font-size: 2.4rem;
   width: 6px;
   height: 6px;
   margin: 4px;
@@ -1573,7 +1575,7 @@ button.burst.button .fa-angle-right,
 input.burst.button .fa-angle-right {
   font-weight: 900;
   position: absolute;
-  font-size: 1.8em;
+  font-size: 1.8rem;
   margin-top: 1px;
   margin-left: 5px;
 }
@@ -1587,8 +1589,8 @@ input.burst.button .fa-angle-right {
 .burst-dashboard-container .burst-dashboard-title {
   padding-top: 22px;
   font-weight: 600;
-  font-size: 24px;
-  line-height: 30px;
+  font-size: 2.4rem;
+  line-height: 3rem;
   margin-bottom: 20px;
 }
 @media screen and (max-width: 720px) {
@@ -1648,7 +1650,7 @@ input.burst.button .fa-angle-right {
 }
 .burst-dashboard-container .burst-dashboard-item .burst-top h1 {
   font-weight: 600;
-  font-size: 2.5em;
+  font-size: 2.5rem;
   padding: 25px;
 }
 .burst-dashboard-container .burst-dashboard-content-container {
@@ -1671,7 +1673,7 @@ input.burst.button .fa-angle-right {
 .burst-dashboard-container .burst-dashboard-content-container .burst-logo {
   display: flex;
   align-items: center;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-header-text {
@@ -1686,7 +1688,7 @@ input.burst.button .fa-angle-right {
   align-items: center;
   margin-top: 35px;
   grid-area: text-completed;
-  font-size: 24px;
+  font-size: 2.4rem;
   color: white;
 }
 @media screen and (max-width: 720px) {
@@ -1695,7 +1697,7 @@ input.burst.button .fa-angle-right {
   }
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-info {
-  font-size: 19px;
+  font-size: 1.9rem;
   font-weight: bold;
   padding-top: 20px;
   padding-bottom: 10px;
@@ -1734,7 +1736,7 @@ input.burst.button .fa-angle-right {
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-progress .burst-dashboard-progress-top .burst-dashboard-top-text {
   display: inline-grid;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 22px;
   max-width: 60%;
   float: left;
@@ -1820,13 +1822,13 @@ input.burst.button .fa-angle-right {
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-documents .burst-upgrade-table .fa-plus {
   color: #61CE70;
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-documents .burst-documents-bottom {
   color: white;
   background-color: black;
   min-height: 70px;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-documents .burst-documents-bottom div {
   margin-bottom: 10px;
@@ -1890,13 +1892,13 @@ input.burst.button .fa-angle-right {
   margin-top: 9px;
   margin-left: 9px;
   font-weight: 900;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   margin-right: 35px;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-footer .burst-footer-block .burst-footer-description {
   width: 70%;
   margin-left: 9px;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   display: flex;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-footer .burst-footer-block .burst-external-btn {
@@ -1908,7 +1910,7 @@ input.burst.button .fa-angle-right {
   float: right;
 }
 .burst-dashboard-container .burst-dashboard-content-container .burst-dashboard-footer .burst-footer-block .burst-external-btn .fa-angle-right {
-  font-size: 1.5em;
+  font-size: 1.5rem;
   vertical-align: middle;
   margin-left: 2px;
 }
@@ -1955,7 +1957,7 @@ input.current-page {
   text-align: center;
   border-radius: 15px;
   padding: 4px 8px 4px 8px;
-  font-size: 0.8em;
+  font-size: 0.8rem;
   font-weight: 600;
   height: 17px;
   line-height: 17px;
@@ -1974,60 +1976,4 @@ input.current-page {
 .burst-status-info .burst-license-status-container .burst-license-status.burst-warning {
   background-color: #f39c12;
   color: white;
-}
-#burst-conclusion {
-  background: #fafafa;
-  padding: 10px 15px;
-  margin: 10px 0 10px 0;
-}
-#burst-conclusion .burst-conclusion__list {
-  font-size: 0.9rem;
-  font-weight: 600;
-}
-#burst-conclusion .burst-conclusion__list li {
-  display: flex;
-  align-items: start;
-  margin: 15px 0;
-}
-#burst-conclusion .burst-conclusion__list li p:not(:first-child),
-#burst-conclusion .burst-conclusion__list li .burst-conclusion__check--check-text,
-#burst-conclusion .burst-conclusion__list li .burst-conclusion__check--report-text {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-#burst-conclusion .burst-conclusion__list li:before {
-  content: "";
-  display: block;
-  height: 1rem;
-  width: 1rem;
-  min-width: 1rem;
-  background-size: 1rem 1rem;
-  background-repeat: no-repeat;
-  margin-right: 10px;
-  margin-top: 1px;
-}
-#burst-conclusion .burst-conclusion__list li.icon-loading:before {
-  background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="spinner" class="svg-inline--fa fa-spinner fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="%23333" d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"></path></svg>');
-  animation-name: rotate-s-loader;
-  animation-iteration-count: infinite;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  position: relative;
-}
-#burst-conclusion .burst-conclusion__list li.icon-success:before {
-  background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="check-circle" class="svg-inline--fa fa-check-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="%2322932e" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>');
-}
-#burst-conclusion .burst-conclusion__list li.icon-error:before {
-  background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" class="svg-inline--fa fa-exclamation-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="%23D7263D" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg>');
-}
-#burst-conclusion .burst-conclusion__list li.icon-warning:before {
-  background-image: url('data:image/svg+xml;utf8,<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-triangle" class="svg-inline--fa fa-exclamation-triangle fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="%23f39c12" d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg>');
-}
-@keyframes rotate-s-loader {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
