--- a/assets/css/input-fields.less
+++ b/assets/css/input-fields.less
@@ -18,6 +18,14 @@
       margin: 0 0;
     }
   }
+  &.burst-copy{
+    .burst-copy-button{
+
+    }
+  }
+}
+.burst-copy-button{
+
 }
 .select2-results__options li{
   font-size: 1.4rem !important;
